--- a/requirements.yaml
+++ b/requirements.yaml
@@ -227,12 +227,15 @@ dependencies:
   - zstandard=0.24.0=py313hbc14757_0
   - zstd=1.5.7=h817c040_0
   - pip:
+      - aiosqlite==0.21.0
       - dotenv==0.9.9
       - langchain-tavily==0.2.12
       - langgraph==1.0.1
       - langgraph-checkpoint==3.0.0
+      - langgraph-checkpoint-sqlite==3.0.0
       - langgraph-prebuilt==1.0.1
       - langgraph-sdk==0.2.9
       - ormsgpack==1.11.0
+      - sqlite-vec==0.1.6
       - xxhash==3.6.0
 prefix: /opt/anaconda3/envs/langgraph
